--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -1,29 +1,22 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  creationTimestamp: null
   labels:
-    io.kompose.service: progtexts2
+    app: progtexts2
   name: progtexts2
 spec:
   replicas: 1
   selector:
     matchLabels:
-      io.kompose.service: progtexts2
-  strategy: {}
+      app: progtexts2
   template:
     metadata:
-      creationTimestamp: null
       labels:
-        io.kompose.network/app-network: "true"
-        io.kompose.service: progtexts2
+        app: progtexts2
     spec:
       containers:
-        - image: petrkalinin/progtexts2-master
-          imagePullPolicy: "Always"
+        - image: zharaskhan/progtexts2-master
           name: progtexts2
           ports:
             - containerPort: 80
-          resources: {}
       restartPolicy: Always
-status: {}
