--- a/k8s/service.yaml
+++ b/k8s/service.yaml
@@ -1,17 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  creationTimestamp: null
-  labels:
-    io.kompose.service: progtexts2
-  name: progtexts2
+  name: progtexts2-svc
 spec:
-  type: NodePort
-  ports:
-    - name: "80"
-      port: 80
-      targetPort: 80
+  type: ClusterIP
   selector:
-    io.kompose.service: progtexts2
-status:
-  loadBalancer: {}
+    app: progtexts2
+  ports:
+    - port: 80
